...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_postingan_anda"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_forum_post"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_layout_with_ds"
            android:layout_marginEnd="@dimen/margin_layout_with_ds"
            tools:listitem="@layout/item_forum_post" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
...
